[project]
name = "real-esrgan"
version = "0.1.0"
description = "Real-ESRGAN + OpenProteus (ROCm)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "basicsr==1.4.2",
    "facexlib>=0.2.5",
    "gfpgan>=1.3.5",
    "numpy<2.0",                     # basicsr is older; avoid NumPy 2 build pain
    "opencv-python-headless>=4.8",
    "pillow>=10.0",
    "ffmpeg-python>=0.2.0",
    "tqdm>=4.67",
    "torch==2.6.0+rocm6.2.4",
    "torchvision==0.21.0+rocm6.2.4",
    # make Triton explicit so uv resolves it from the ROCm index
    "pytorch-triton-rocm==3.2.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "basicsr-fixed>=1.4.2",
]

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true
